@@ -127,6 +127,7 @@ All (GUI):
 - Fixed crash in wxHtmlHelpController if the help window is still open.
 - Fixed generic art provider to scale bitmaps down to client-specific
   best size if needed.
+- Made wxSpinCtrl::Reparent() in MSW and generic versions (Angelo Mottola)
 
 All (Unix):
 
